--- a/public/index.html
+++ b/public/index.html
@@ -43,52 +43,67 @@
 <body>
 
     <div class="page">
-        <div class="navbar navbar-style-1">
-            <div class="navbar-bg"></div>
-            <div class="navbar-inner sliding">
-                <div class="left">
-                    <a href="#" class="link back">
-                        <svg width="11" height="16" viewBox="0 0 11 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <div class="page-content">
+            <div class="navbar navbar-style-1">
+                <div class="navbar-bg"></div>
+                <div class="navbar-inner sliding">
+                    <div class="left">
+                        <a href="history.back()" class="link back">
+                            <svg width="11" height="16" viewBox="0 0 11 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path fill-rule="evenodd" clip-rule="evenodd" d="M4.3419 8L10.2222 2.22222L8 2.73828e-07L1.22201e-06 8L8 16L10.2222 13.7778L4.3419 8Z" fill="#122261"/>
                       </svg>
-                        <span class="if-not-md">Back</span>
-                    </a>
+
+                        </a>
+                    </div>
+                    <div class="title color-theme">Fingerprint</div>
                 </div>
-                <div class="title">Fingerprint</div>
             </div>
-        </div>
-        <div class="tabs">
-            <div id="tab-1" class="page-content tab tab-active">
-                <div class="block">
-                    <center>
-                        <p style="font-size:15px;">Mark your attendance for Web Desiging Lecture</p>
-                        <div class="color-theme" style="background-color: var(--f7-theme-color); border-radius: 50%; height:80px; width:80px;">
+            <div class="tabs">
+                <div id="tab-1" class="page-content tab tab-active">
+                    <div class="space" style=" height:55px;"></div>
+                    <div class="block">
+                        <center>
+                            <p style="font-size:15px;">You're new to Attender. <br />Please register your biometrics below</p>
+                            <div class="color-theme" style="background-color: var(--f7-theme-color); border-radius: 50%; height:80px; width:80px;">
 
-                            <svg style="fill: white; padding: 8px;" xmlns="http://www.w3.org/2000/svg" class="ionicon s-ion-icon" viewBox="0 0 512 512"><title>Finger Print</title><path d="M390.42 75.28a10.45 10.45 0 01-5.32-1.44C340.72 50.08 302.35 40 256.35 40c-45.77 0-89.23 11.28-128.76 33.84C122 77 115.11 74.8 111.87 69a12.4 12.4 0 014.63-16.32A281.81 281.81 0 01256.35 16c49.23 0 92.23 11.28 139.39 36.48a12 12 0 014.85 16.08 11.3 11.3 0 01-10.17 6.72zm-330.79 126a11.73 11.73 0 01-6.7-2.16 12.26 12.26 0 01-2.78-16.8c22.89-33.6 52-60 86.69-78.48 72.58-38.84 165.51-39.12 238.32-.24 34.68 18.48 63.8 44.64 86.69 78a12.29 12.29 0 01-2.78 16.8 11.26 11.26 0 01-16.18-2.88c-20.8-30.24-47.15-54-78.36-70.56-66.34-35.28-151.18-35.28-217.29.24-31.44 16.8-57.79 40.8-78.59 71a10 10 0 01-9.02 5.08zM204.1 491a10.66 10.66 0 01-8.09-3.6C175.9 466.48 165 453 149.55 424c-16-29.52-24.27-65.52-24.27-104.16 0-71.28 58.71-129.36 130.84-129.36S387 248.56 387 319.84a11.56 11.56 0 11-23.11 0c0-58.08-48.32-105.36-107.72-105.36S148.4 261.76 148.4 319.84c0 34.56 7.39 66.48 21.49 92.4 14.8 27.6 25 39.36 42.77 58.08a12.67 12.67 0 010 17 12.44 12.44 0 01-8.56 3.68zm165.75-44.4c-27.51 0-51.78-7.2-71.66-21.36a129.1 129.1 0 01-55-105.36 11.57 11.57 0 1123.12 0 104.28 104.28 0 0044.84 85.44c16.41 11.52 35.6 17 58.72 17a147.41 147.41 0 0024-2.4c6.24-1.2 12.25 3.12 13.4 9.84a11.92 11.92 0 01-9.47 13.92 152.28 152.28 0 01-27.95 2.88zM323.38 496a13 13 0 01-3-.48c-36.76-10.56-60.8-24.72-86-50.4-32.37-33.36-50.16-77.76-50.16-125.28 0-38.88 31.9-70.56 71.19-70.56s71.2 31.68 71.2 70.56c0 25.68 21.5 46.56 48.08 46.56s48.08-20.88 48.08-46.56c0-90.48-75.13-163.92-167.59-163.92-65.65 0-125.75 37.92-152.79 96.72-9 19.44-13.64 42.24-13.64 67.2 0 18.72 1.61 48.24 15.48 86.64 2.32 6.24-.69 13.2-6.7 15.36a11.34 11.34 0 01-14.79-7 276.39 276.39 0 01-16.88-95c0-28.8 5.32-55 15.72-77.76 30.75-67 98.94-110.4 173.6-110.4 105.18 0 190.71 84.24 190.71 187.92 0 38.88-31.9 70.56-71.2 70.56s-71.2-31.68-71.2-70.56c.01-25.68-21.49-46.6-48.07-46.6s-48.08 20.88-48.08 46.56c0 41 15.26 79.44 43.23 108.24 22 22.56 43 35 75.59 44.4 6.24 1.68 9.71 8.4 8.09 14.64a11.39 11.39 0 01-10.87 9.16z"></path></svg>
+                                <svg style="fill: white; padding: 8px;" xmlns="http://www.w3.org/2000/svg" class="ionicon s-ion-icon" viewBox="0 0 512 512"><title>Finger Print</title><path d="M390.42 75.28a10.45 10.45 0 01-5.32-1.44C340.72 50.08 302.35 40 256.35 40c-45.77 0-89.23 11.28-128.76 33.84C122 77 115.11 74.8 111.87 69a12.4 12.4 0 014.63-16.32A281.81 281.81 0 01256.35 16c49.23 0 92.23 11.28 139.39 36.48a12 12 0 014.85 16.08 11.3 11.3 0 01-10.17 6.72zm-330.79 126a11.73 11.73 0 01-6.7-2.16 12.26 12.26 0 01-2.78-16.8c22.89-33.6 52-60 86.69-78.48 72.58-38.84 165.51-39.12 238.32-.24 34.68 18.48 63.8 44.64 86.69 78a12.29 12.29 0 01-2.78 16.8 11.26 11.26 0 01-16.18-2.88c-20.8-30.24-47.15-54-78.36-70.56-66.34-35.28-151.18-35.28-217.29.24-31.44 16.8-57.79 40.8-78.59 71a10 10 0 01-9.02 5.08zM204.1 491a10.66 10.66 0 01-8.09-3.6C175.9 466.48 165 453 149.55 424c-16-29.52-24.27-65.52-24.27-104.16 0-71.28 58.71-129.36 130.84-129.36S387 248.56 387 319.84a11.56 11.56 0 11-23.11 0c0-58.08-48.32-105.36-107.72-105.36S148.4 261.76 148.4 319.84c0 34.56 7.39 66.48 21.49 92.4 14.8 27.6 25 39.36 42.77 58.08a12.67 12.67 0 010 17 12.44 12.44 0 01-8.56 3.68zm165.75-44.4c-27.51 0-51.78-7.2-71.66-21.36a129.1 129.1 0 01-55-105.36 11.57 11.57 0 1123.12 0 104.28 104.28 0 0044.84 85.44c16.41 11.52 35.6 17 58.72 17a147.41 147.41 0 0024-2.4c6.24-1.2 12.25 3.12 13.4 9.84a11.92 11.92 0 01-9.47 13.92 152.28 152.28 0 01-27.95 2.88zM323.38 496a13 13 0 01-3-.48c-36.76-10.56-60.8-24.72-86-50.4-32.37-33.36-50.16-77.76-50.16-125.28 0-38.88 31.9-70.56 71.19-70.56s71.2 31.68 71.2 70.56c0 25.68 21.5 46.56 48.08 46.56s48.08-20.88 48.08-46.56c0-90.48-75.13-163.92-167.59-163.92-65.65 0-125.75 37.92-152.79 96.72-9 19.44-13.64 42.24-13.64 67.2 0 18.72 1.61 48.24 15.48 86.64 2.32 6.24-.69 13.2-6.7 15.36a11.34 11.34 0 01-14.79-7 276.39 276.39 0 01-16.88-95c0-28.8 5.32-55 15.72-77.76 30.75-67 98.94-110.4 173.6-110.4 105.18 0 190.71 84.24 190.71 187.92 0 38.88-31.9 70.56-71.2 70.56s-71.2-31.68-71.2-70.56c.01-25.68-21.49-46.6-48.07-46.6s-48.08 20.88-48.08 46.56c0 41 15.26 79.44 43.23 108.24 22 22.56 43 35 75.59 44.4 6.24 1.68 9.71 8.4 8.09 14.64a11.39 11.39 0 01-10.87 9.16z"></path></svg>
+                            </div>
+
+                            <h5 class="custom-file-label text-primary">Attender - EAS</h5>
+                            <h5>Student Registration</h5>
+                        </center>
+                        <div class="item-input-wrap" style="    background: #f8f8f8;
+                           
+                            padding: 15px 25px;
+                            border-radius: 8px;
+                            border: 1px solid;
+                            border-color: #e9e9e9;
+                            font-size: 16px;
+                            color: #000000;
+                            font-weight: 400;">
+                            <input type="text" id="alias" placeholder="Enter Your College Roll No.">
+                            <span class="input-clear-button"></span>
                         </div>
-
-                        <input type="text" id="alias" placeholder="Enter your Rollno." />
-                        <button id="passwordless-register">Register</button>
-                        <h5 class="custom-file-label text-primary">Parth Chopra</h5>
-                        <h5>B.Voc- SD - I</h5>
-                        <h5>1211673042003</h5>
-
+                        <div class="toolbar toolbar-bottom container footer-button padding">
+                            <center><a id="passwordless-register" class="link" class="button button-fill sheet-open button-large button" data-sheet=".demo-sheet-swipe-to-close">REGISTER</a></center>
+                        </div>
 
                         <h5 class="custom-file-label text-primary"><pre id="status"></pre></h5>
 
 
                         <!-- <button id="passwordless-register" class="col button button-large button-fill">register</button><br/><br /> -->
                         <!-- <button id="passwordless-sigin" class="col button button-large button-fill">signin</button> -->
-                        <button id="passwordless-sigin">signin</button>
+                        <!-- <button id="passwordless-sigin">signin</button> -->
                         <pre id="status"></pre>
-                    </center>
 
-                    <div class="bottom-layer">
-                        <div class="toolbar toolbar-bottom container footer-button padding">
-                            <a href="javascript:pageRedirect()" onclick="pageRedirect()" class="link back" class="button button-fill sheet-open button-large button" data-sheet=".demo-sheet-swipe-to-close">OK</a>
+
+                        <div class="bottom-layer">
+                            <div class="toolbar toolbar-bottom container footer-button padding">
+                                <button href="javascript:pageRedirect()" onclick="pageRedirect()" class="col button button-large button-fill">DONE</button>
+                            </div>
                         </div>
-                    </div>
 
+                    </div>
                 </div>
             </div>
         </div>
