--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
             </div>
             <div class="tabs">
                 <div id="tab-1" class="page-content tab tab-active">
-                    <div class="space" style=" height:55px;"></div>
+                    <div class="space" style=" height:35px;"></div>
                     <div class="block">
                         <center>
                             <p style="font-size:15px;">You're new to Attender. <br />Please register your biometrics below</p>
@@ -88,7 +88,7 @@
                             <center><a id="passwordless-register" class="link" class="button button-fill sheet-open button-large button" data-sheet=".demo-sheet-swipe-to-close">REGISTER</a></center>
                         </div>
 
-                        <h5 class="custom-file-label text-primary"><pre id="status"></pre></h5>
+                        <h6 class="text-primary"><pre id="status"></pre></h6>
 
 
                         <!-- <button id="passwordless-register" class="col button button-large button-fill">register</button><br/><br /> -->
